--- a/glpi/css/includes/_logos.scss
+++ b/glpi/css/includes/_logos.scss
@@ -29,11 +29,11 @@
  * ---------------------------------------------------------------------
  */
 
-$logo-light: "../pics/logos/login_logo_tipi.png" !default;
-$logo-light-reduced: "../pics/logos/login_logo_tipi.png" !default;
-$logo-dark: "../pics/logos/login_logo_tipi.png" !default;
-$logo-dark-reduced: "../pics/logos/login_logo_tipi.png" !default;
-$logo-dark-login: "../pics/logos/login_logo_tipi.png" !default;
-$logo-light-login: "../pics/logos/login_logo_tipi.png" !default;
+$logo-light: "../pics/logos/custom_logo.png" !default;
+$logo-light-reduced: "../pics/logos/custom_logo.png" !default;
+$logo-dark: "../pics/logos/custom_logo.png" !default;
+$logo-dark-reduced: "../pics/logos/custom_logo.png" !default;
+$logo-dark-login: "../pics/logos/custom_logo.png" !default;
+$logo-light-login: "../pics/logos/custom_logo.png" !default;
 $logo: $logo-light;
 $logo_reduced: $logo-light-reduced;
