--- a/glpi/templates/layout/parts/head.html.twig
+++ b/glpi/templates/layout/parts/head.html.twig
@@ -32,7 +32,7 @@
 <!DOCTYPE html>
 <html lang="{{ lang }}" {% if high_contrast %}data-high-contrast="1"{% endif %}>
 <head>
-   <title>{{ title }} - TI'PI</title>
+   <title>{{ title }} - CUSTOM</title>
 
    <meta charset="utf-8" />
 
